📒🎬 Checkpoint ./fstatements.html:9236857/290 ./valuations.html:9236857/1431

--- a/valuations.html
+++ b/valuations.html
@@ -22,7 +22,7 @@
 
     <div id="Valuation Methods">
         <p id="DCF">A DCF or Discounted cash flow is a valuation method that determines the </p>
-        <p id="Multiples">multiples valuation method is based on the comparison of a companies value using different valuation metrics/p>
+        <p id="Multiples">multiples valuation method is based on the comparison of a companies value using different valuation metrics</p>
         <p id="Precidents">The Precedent analysis valuation method where the price paid for a similar company is indication of a companies value</p>
     </div>
 
