🌛👍 Checkpoint ./fstatements.html:9236857/39 ./valuations.html:9236857/174 ./script.js:9236857/600

--- a/valuations.html
+++ b/valuations.html
@@ -26,7 +26,7 @@
         <p id="Precidents">The Precedent analysis valuation method where the price paid for a similar company is indication of a companies value</p>
     </div>
 
-        <script src="websiteOne.js"></script>
+      <canvas id="lineChart"></canvas>
 </body>
-
+<script src="script.js"></script>
 </html>
