📰🐲 Checkpoint ./valuations.html:9236857/1132 ./fstatements.html:9236857/284 ./script.js:9236857/1208

--- a/fstatements.html
+++ b/fstatements.html
@@ -3,6 +3,12 @@
 
 <head>
     <title>Javascript and Jquery practice in vscode </title>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+  <!-- Bootstrap core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <link href="css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <header>
