--- a/valuations.html
+++ b/valuations.html
@@ -3,7 +3,14 @@
 
 <head>
     <title>Javascript and Jquery practice in vscode </title>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+  <!-- Bootstrap core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <link href="css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+  
 </head>
 <header>
     <nav>
@@ -27,6 +34,8 @@
     </div>
 
       <canvas id="lineChart"></canvas>
+ <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
 </body>
 <script src="script.js"></script>
 </html>
