--- a/index.html
+++ b/index.html
@@ -3,21 +3,40 @@
 
 <head>
     <title> Stock Home </title>
-    <link rel="stylesheet" href="style.css">
+  <! Bootstrap CSS script> 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 <header>
-    <nav>
-        <ul>
-            <li><a href="websiteONe.html">Home</a></li>
-            <li><a href="Fstatements.html">Financial Statements</a></li>
-            <li><a href="sectors.html">Sectors</a></li>
-            <li><a href="valuations.html">Valuations</a></li>
-        </ul>
-  </nav>
+      
+
 </header>
 
 <body>
- 
+  <div class="pos-f-t">
+      <div class="collapse" id="navbarToggleExternalContent">
+        <div class="bg-dark p-4">
+          <span class="text-muted">
+            <ul>
+                <li><a href="websiteONe.html">Home</a></li>
+                <li><a href="Fstatements.html">Financial Statements</a></li>
+                <li><a href="sectors.html">Sectors</a></li>
+                <li><a href="valuations.html">Valuations</a></li>
+            </ul>
+          </span>
+        </div>
+      </div>
+      <nav class="navbar navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </nav>
+    </div>
 
+  
+<! Scripts for bootstrap tools>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
