🏵🍰 Checkpoint ./index.html:9236857/389 ./script.js:9236857/1366

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </header>
 
 <body>
+  <! Beginning of navigation> 
   <div class="pos-f-t">
       <div class="collapse" id="navbarToggleExternalContent">
         <div class="bg-dark p-4">
@@ -32,7 +33,20 @@
         </button>
       </nav>
     </div>
-
+<! end of Navigation> 
+  
+  <! Search Bar>
+  
+  <div class="searchBar">
+      <input
+        type="text"
+        id="textinput"
+        maxlength="12"
+        placeholder="Search"
+        onkeydown="return onlyNumbers(event)"
+        onkeyup="return myKeyPress(event)"
+      />
+    </div>
   
 <! Scripts for bootstrap tools>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
