⛄️🚇 Checkpoint ./index.html:9236857/281 ./style.css:9236857/300 ./script.js:9236857/2704

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 <! end of Navigation> 
   
   <! Search Bar>
-  
+  <br/>
   <div class="searchBar">
       <input
         type="text"
         id="textinput"
         maxlength="12"
-        placeholder="Search"
-        onkeydown="return onlyNumbers(event)"
-        onkeyup="return myKeyPress(event)"
+        placeholder="Enter stock name"
+        
       />
+    <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" onkeyup="return myKeyPress(event)">Search</a>
     </div>
   
 <! Scripts for bootstrap tools>
