🖖🍳 Checkpoint ./script.js:9236857/1457 ./index.html:9236857/55

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         placeholder="Enter stock name"
         
       />
-    <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" onkeyup="return myKeyPress(event)">Search</a>
+    <a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true" onclick="onClick(this)">Search</a>
     </div>
   
 <! Scripts for bootstrap tools>
